@@ -4,7 +4,8 @@ Changelog
 4.1.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Display the translation of the folder default page in the current language.
+  [thomasdesvenain]
 
 
 4.1.1 (2011-11-15)
